<resources>
    <string name="app_name">Dogs</string>

    <string name="permission_sms_title">Send SMS permission</string>
    <string name="permission_sms_message">This app requires access to send an SMS.</string>
    <string name="permission_sms_btn_accept">Ask me</string>
    <string name="permission_sms_btn_cancel">No</string>

    <string name="list_menu_settings">Settings</string>
    <string name="list_error_listError">An error occurred while loading data.</string>

    <string name="item_img_description">Dog image</string>

    <string name="detail_img_description">Dog image</string>
    <string name="detail_lbl_purpose">Purpose:</string>
    <string name="detail_lbl_temperament">Temperament:</string>
    <string name="detail_lbl_lifespan">Lifespan:</string>
    <string name="detail_menu_sendSms">Send SMS</string>
    <string name="detail_menu_share">Share</string>
    <string name="dialog_sms_hint_to">To:</string>
    <string name="dialog_sms_hint_text">Text:</string>

    <string name="dialog_send_sms_btn_accept">Send SMS</string>
    <string name="dialog_send_sms_btn_cancel">Cancel</string>

    <string name="share_dog_subject">Check out this dog breed</string>
    <string name="share_dog_title">Share with</string>
</resources>
