<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="smsInfo"
            type="page.shellcore.tech.android.dogs.model.SmsInfo" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilDestination"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dialog_sms_hint_to"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilMessage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/tilDestination"
            app:layout_constraintStart_toStartOf="@+id/tilDestination"
            app:layout_constraintTop_toBottomOf="@+id/tilDestination">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dialog_sms_hint_text"
                android:inputType="textMultiLine"
                android:text="@{smsInfo.text}" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/imgDog"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/detail_img_description"
            android:imageUrl="@{smsInfo.imageUrl}"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="@+id/tilMessage"
            app:layout_constraintStart_toStartOf="@+id/tilMessage"
            app:layout_constraintTop_toBottomOf="@+id/tilMessage"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>