<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="dog"
            type="page.shellcore.tech.android.dogs.model.DogBreed" />

        <variable
            name="dogPalette"
            type="page.shellcore.tech.android.dogs.model.DogPalette"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@{dogPalette.color}"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/detailImgDog"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:contentDescription="@string/detail_img_description"
            android:imageUrl="@{dog.imageUrl}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <TextView
            android:id="@+id/detailTxtName"
            style="@style/itemTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:text="@{dog.dogBreed}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detailImgDog"
            tools:text="Dog name" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="40dp"
            android:text="@string/detail_lbl_purpose"
            android:textAllCaps="true"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detailTxtName" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/detail_lbl_temperament"
            android:textAllCaps="true"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/detail_lbl_lifespan"
            android:textAllCaps="true"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/detailTxtPurpose"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@{dog.bredFor}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/barrier2"
            app:layout_constraintTop_toTopOf="@+id/textView2"
            tools:text="Dog purpose" />

        <TextView
            android:id="@+id/detailTxtTemperament"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@{dog.temperament}"
            app:layout_constraintEnd_toEndOf="@+id/detailTxtPurpose"
            app:layout_constraintStart_toStartOf="@+id/detailTxtPurpose"
            app:layout_constraintTop_toBottomOf="@+id/detailTxtPurpose"
            tools:text="Dog temperament" />

        <TextView
            android:id="@+id/detailTxtLifespan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@{dog.lifeSpan}"
            app:layout_constraintEnd_toEndOf="@+id/detailTxtTemperament"
            app:layout_constraintStart_toStartOf="@+id/detailTxtTemperament"
            app:layout_constraintTop_toBottomOf="@+id/detailTxtTemperament"
            tools:text="Dog lifespan" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="end"
            app:constraint_referenced_ids="textView2,textView3,textView4"
            tools:layout_editor_absoluteX="411dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
